# s_c_converter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: compilation_flags.cmake
include/: Converter.h
src/: Converter.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp  tests.cpp
